# Project_sim

./: .gitignore  .markdownlint-cli2.jsonc  .python-version  AGENTS.md  LICENCE  README.md  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt
FestinaLente/: main.py
FestinaLente/analytics/: analyze_batch.py  orchestrator.py
FestinaLente/app/: notes.txt
FestinaLente/core/: engine.py
FestinaLente/regimes/: __init__.py  compiled.py  compiler.py  energetic_laws.md  registry.py  spec.py
FestinaLente/runner/: batch_runner.py  factories.py  results.py  seeds.py  single_runner.py
FestinaLente/validation/: assertions.py  contracts.py  helpers.py
dev/: .gitignore  PREADME.md  notes.txt
dev/engine_build/: agent.py  config.py  engineP3.py  engineP4.py  engine_basics.py  main.py  metrics.py  rng_utils.py  run_experiment.py  seed_seq_utils.py  state_schema.py  world.py
dev/plot_sim/: test_vis.py  test_vis2.py
docs/Project_Status/: CURRENT.md  CURRENT_STATE.md  PERFORMANCE_REPORT.md  PERF_ref.md  ROADMAP.md
docs/canonical_docs/: ARCHITECTURE.md  Agent.md  CONFIGURATION.md  DETERMINISM.md  EXPERIMENTS.md  MATHEMATICAL_MODEL.md  RNG_ARCHITECTURE.md  SIMULATION_PIPELINE.md
docs/releases/: v0.2.5.md  v0.2.md
docs/system_layers/: AGENT_LAYER.md  CONFIGURATION_LAYER.md  ENERGY_RESOURCE_COUPLING_LAYER.md  ENGINE_LAYER.md  RANDOMNES_LAYER.md  (+3 more)
ecosystem/: README.md  engine.py  test.py
engine_build/: main.py
tests/: conftest.py  helpers.py  test_engine.py  test_invariants.py  test_regime_validation.py  test_rng_isolation.py  test_snapshots.py
(+282 files in other folders)
